--- a/css/master.css
+++ b/css/master.css
@@ -62,6 +62,7 @@ body {
 .setting-box .option-box h4 {
     margin: 0;
     color: #666;
+    font-size: 14px;
 }
 
 .setting-box .option-box .colors-list {
@@ -109,6 +110,30 @@ body {
 .setting-box .colors-list li:nth-child(5) {
     background-color: #22ed76;
 }
+
+.setting-box .option-box .yes ,
+.setting-box .option-box .no {
+    width: 50px;
+    background-color: #009688;
+    color: #fff;
+    margin-top: 10px;
+    display: inline-block;
+    font-size: 12px;
+    padding: 4px 10px;
+    font-weight: bold;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+    opacity: 0.5;
+    cursor: pointer;
+}
+.setting-box .random-backgrounds span.active{
+    opacity: 1;
+}
+
+
 
 /* End setting box */
 
