Added About-Us Section

--- a/css/master.css
+++ b/css/master.css
@@ -10,6 +10,12 @@ body {
     font-family: 'Open Sans', sans-serif;
 }
 
+.container{
+    width: 1170px;
+    padding-left: 15px;
+    padding-right: 15px;
+    margin: auto;
+}
 /* start setting box */
 .setting-box {
     position: fixed;
@@ -230,3 +236,41 @@ body {
 }
 
 /* End landing Page */
+
+/* start about us */
+.about-us{
+padding-top: 50px;
+padding-bottom: 50px;
+display: flex;
+}
+.about-us .info-box{
+    flex: 1;
+    padding: 30px;
+}
+.about-us .info-box h2{
+font-weight: bold;
+color: var(--main-color);
+font-size: 30px;
+margin: 0 0 10px;
+
+}
+.about-us .info-box p{
+line-height: 1.8;
+color: #b1a9a9;
+margin: 0;
+}
+.about-us .image-box{
+text-align: center;
+flex: 1;
+}
+.about-us .image-box img{
+    width:400px;
+    margin-top: 30px;
+    border-radius:15px ;
+    -webkit-border-radius:15px ;
+    -moz-border-radius:15px ;
+    -ms-border-radius:15px ;
+    -o-border-radius:15px ;
+}
+
+/* End about us */
