--- a/css/master.css
+++ b/css/master.css
@@ -274,3 +274,46 @@ flex: 1;
 }
 
 /* End about us */
+/* Start Skills */
+.skills{
+    padding-top: 50px;
+    padding-bottom: 50px;
+    background-color: #eee;
+}
+.skills h2{
+    font-weight: bold;
+        color: var(--main-color);
+        font-size: 30px;
+        margin: 0 0 50px;
+        text-align: center;
+        
+}
+.skills .skill-box {
+    background-color: #fff;
+    display: flex;
+    padding: 15px;
+    margin-bottom: 15px;
+}
+.skills .skill-box .skill-name{
+width: 140px;
+font-weight: bold;
+text-align: center;
+line-height: 30px;
+}
+.skills .skill-box .skill-progress{ height: 30px; background-color: #f6f6f6; width: 100%; border-radius: 6px; -webkit-border-radius: 6px; -moz-border-radius: 6px; -ms-border-radius: 6px; -o-border-radius: 6px;
+    position: relative;
+}
+.skills .skill-progress span{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 0;
+    height: 100%;
+    background-color: var(--main-color);
+    transition:all 0.5s ;
+    -webkit-transition:all 0.5s ;
+    -moz-transition:all 0.5s ;
+    -ms-transition:all 0.5s ;
+    -o-transition:all 0.5s ;
+}
+/* End Skills */
