--- a/css/master.css
+++ b/css/master.css
@@ -317,3 +317,98 @@ line-height: 30px;
     -o-transition:all 0.5s ;
 }
 /* End Skills */
+/* Start Gallery */
+.gallery{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.gallery h2{
+    font-weight: bold;
+        color: var(--main-color);
+        font-size: 30px;
+        margin: 0 0 50px;
+        text-align: center;
+}
+.gallery .container-2{
+    width: 100%;
+        display: flex;
+        flex-wrap: wrap;
+}
+.gallery .images-box{
+width: 20%;
+    overflow: hidden;
+    background-color: rgb(0, 0, 0);
+
+}
+.gallery .images-box img{
+    width: 100%;
+        height: 250px;
+        transform: scale(1.15);
+        -webkit-transform: scale(1.15);
+        -moz-transform: scale(1.15);
+        -ms-transform: scale(1.15);
+        -o-transform: scale(1.15);
+        transition: 0.8s;
+        -webkit-transition: 0.8s;
+        -moz-transition: 0.8s;
+        -ms-transition: 0.8s;
+        -o-transition: 0.8s;
+        opacity: 0.6;
+        cursor: pointer;
+}
+.gallery .images-box img:hover{
+transform: scale(1.02);
+    -webkit-transform: scale(1.02);
+    -moz-transform: scale(1.02);
+    -ms-transform: scale(1.02);
+    -o-transform: scale(1.02);
+    opacity: 1;
+}
+
+.popup-overlay{
+    z-index: 1000;
+    position: fixed;
+    top: 0;
+    nav-left: 0;
+    height: 100%;
+    width: 100%;
+    background-color: rgb(0, 0, 0 , 0.6);
+}
+
+.popup-box{ position: fixed; top: 50%; left: 50%; transform: translate(-50% , -50%) ; -webkit-transform: translate(-50% , -50%) ; -moz-transform: translate(-50% , -50%) ; -ms-transform: translate(-50% , -50%) ; -o-transform: translate(-50% , -50%) ;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    z-index: 1001;
+    padding: 20px;
+}
+
+.popup-box h3{
+    font-weight: bold;
+    text-align: center;
+    margin: 0 0 20px;
+    color: var(--main-color);
+}
+.popup-box img{max-width: 100%;
+}
+
+.close-button{
+    position: absolute;
+    top: -15px;
+    right: -15px;
+    background-color: var(--main-color);
+    height: 40px;
+    width: 40px;
+    line-height: 40px;
+    text-align: center;
+    font-size: 20px;
+    color:#fff ;
+    font-weight: bold;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    cursor: pointer;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+/* End Gallery */
