added TimeLine Section

--- a/css/master.css
+++ b/css/master.css
@@ -412,3 +412,114 @@ transform: scale(1.02);
     -o-border-radius: 50%;
 }
 /* End Gallery */
+/* Start Timeline  */
+.timeline{
+   padding-top: 50px;
+   padding-bottom: 50px;
+   background-color: #eee;
+}
+.timeline .timeline-content{
+position: relative;
+overflow: hidden;
+}
+.timeline .timeline-content::before{
+    content: "";
+position: absolute;
+height: 100%;
+width: 2px;
+top: 0;
+left: 50%;
+background-color: var(--main-color);
+margin-left: -1px;
+}
+.timeline .timeline-content .year{
+    margin: 20px auto;
+    width: 200px;
+    background-color: var(--main-color);
+    position: relative;
+    z-index: 2;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    text-align: center;
+    color: #fff;
+    padding: 2px 5px;
+    font-weight: bold;
+}
+
+.timeline .timeline-content .left,
+.timeline .timeline-content .right{
+    width: calc(50% - 25px);
+    margin-bottom: 40px;
+    position: relative;
+}
+.timeline .timeline-content .left{
+   float:left ;
+}
+.timeline .timeline-content .left::before,
+.timeline .timeline-content .right::before{
+    content: "";
+    width: 14px;
+    height: 14px;
+    background-color: #fff;
+    border: 3px solid var(--main-color);
+    position: absolute;
+    top: 20px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.timeline .timeline-content .left::before{
+    right: -35px;
+}
+.timeline .timeline-content .right::before{
+   left: -35px;
+}
+
+.timeline .timeline-content .right {
+    float: right;
+}
+.timeline .timeline-content .content{
+    padding: 20px;
+    background-color:#fff ;
+}
+.timeline .timeline-content .content h3{
+  font-weight: bold;
+  color: var(--main-color);
+ margin: 0 0 10px;
+}
+.timeline .timeline-content .content h3 {
+    color: #666;
+    margin: 0;
+    line-height: 1.6;
+}
+
+.clearFix{
+    clear: both;
+}
+
+.timeline .timeline-content .left .content::before {
+    content: "";
+    border: 10px solid;
+    border-color: transparent transparent transparent #fff;
+    height: 0;
+    width: 0;
+    position: absolute;
+    top: 20px;
+    right: -20px;
+}
+.timeline .timeline-content .right .content::before {
+    content: "";
+    border: 10px solid;
+    border-color: transparent #fff transparent transparent;
+    height: 0;
+    width: 0;
+    position: absolute;
+    top: 20px;
+    left: -20px;
+}
+/* END Timeline  */
