--- a/css/master.css
+++ b/css/master.css
@@ -523,3 +523,134 @@ margin-left: -1px;
     left: -20px;
 }
 /* END Timeline  */
+
+/* Start features */
+.features{
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+.features h2{
+    font-weight: bold;
+    font-size: 30px;
+    color: var(--main-color);
+    margin: 0 0 60px;
+    text-align: center;
+    
+}
+
+.features .container{
+        display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+     
+}
+.features .feat-box{
+    flex-basis: 30%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    margin-bottom: 40px;
+
+}
+.features .feat-box h4{
+font-size: 22px;
+margin: 15px 0 20px;
+position: relative;
+}
+.features .feat-box h4::before{ content: ""; width: 40px; height: 4px; background-color: var(--main-color); position: absolute; left: 50%; transform:translate(-50% , -50%) ; -webkit-transform:translate(-50% , -50%) ; -moz-transform:translate(-50% , -50%) ; -ms-transform:translate(-50% , -50%) ; -o-transform:translate(-50% , -50%) ;
+    bottom: -20px;
+}
+.features .feat-box p{
+
+}
+
+.feat-box img{
+    width: 96px;
+    height:96px;
+}
+/* END features */
+/* Start Testimonials */
+.testimonials{
+  
+    position: relative;
+    padding-top: 80px;
+    padding-bottom: 80px;
+}
+.testimonials::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 50%;
+    height: 100%;
+    background-color: var(--main-color);
+}
+.testimonials::after{
+    content: "";
+    content: "";
+        position: absolute;
+        top: 0;
+        right: 0;
+        width: 50%;
+        height: 100%;
+        background-color: #333;
+    }
+
+.testimonials h2{
+font-weight: bold;
+    font-size: 30px;
+    color: #fff;
+    margin: 0 0 60px;
+    text-align: left;
+    position: relative;
+    z-index: 2;
+}
+.testimonials .container .box{
+display: flex;
+justify-content: space-between;
+
+}
+.testimonials .ts-box{
+   background-color: #fff;
+        z-index: 2;
+        flex-basis: 33%;
+        padding: 20px;
+}
+.testimonials .ts-box > p{
+margin: 0 0 20px;
+line-height: 1.5;
+font-size: 18px;
+color: #707070;
+font-style: italic;
+}
+
+.testimonials .ts-box .person-info{
+   display: flex;
+  justify-content: space-around;
+}
+
+.person-info .info{
+    display: flex;
+    flex-direction: column;
+    
+}
+.testimonials .ts-box .person-info img {
+    border-radius:50%;
+    -webkit-border-radius:50%;
+    -moz-border-radius:50%;
+    -ms-border-radius:50%;
+    -o-border-radius:50%;
+    width: 40%;
+}
+.testimonials .ts-box .person-info .info {
+    
+}
+.testimonials .ts-box .info h4{
+margin: 35px 0 10px;
+}
+.testimonials .ts-box .info p {
+    color: #707070;
+    margin: 0;
+}
+/* End Testimonials */
