--- a/css/master.css
+++ b/css/master.css
@@ -123,7 +123,7 @@ body {
 .setting-box .option-box .yes ,
 .setting-box .option-box .no {
     width: 50px;
-    background-color: #009688;
+    background-color:var(--main-color);
     color: #fff;
     margin-top: 10px;
     display: inline-block;
@@ -138,22 +138,39 @@ body {
     opacity: 0.5;
     cursor: pointer;
 }
-.setting-box .random-backgrounds span.active{
+.setting-box .option-box span.active{
     opacity: 1;
 }
 
-
+.reset-options{
+    width: 177px;
+    color: #fff;
+    background-color: #fc4011;
+    border: none;
+    margin: 10px auto;
+    padding: 10px;
+    display: block;
+    font-size: 85%;
+    font-weight: bold;
+    cursor: pointer;
+    border-radius: 4px;
+    -webkit-border-radius: 4px;
+    -moz-border-radius: 4px;
+    -ms-border-radius: 4px;
+    -o-border-radius: 4px;
+}
 
 /* End setting box */
 
 /* Start Nav B ullets */
 .nav-bullets{ position: fixed; right: 0; top: 50%; transform:translateY(-50%); -webkit-transform:translateY(-50%); -moz-transform:translateY(-50%); -ms-transform:translateY(-50%); -o-transform:translateY(-50%);
     width: 50px;
-    z-index: 1;
+    z-index: 10002;
 } 
 .nav-bullets .bullet{ width: 20px; height: 20px; border: 3px solid var(--main-color); margin: 10px auto; border: radius 50%; ; -webkit-border-radius:50% ; -moz-border-radius:50% ; -ms-border-radius:50% ; -o-border-radius:50% ; position: relative;
     cursor: pointer;
 }
+
 .nav-bullets .bullet:hover .tooltip{
     display: block;
 }
