Added contact us section && toggle-menu && responsive media

--- a/css/master.css
+++ b/css/master.css
@@ -12,7 +12,7 @@ body {
 
 
 .container{
-    width: 1170px;
+    /* width: 1170px; */
     padding-left: 15px;
     padding-right: 15px;
     margin: auto;
@@ -183,7 +183,7 @@ body {
     right: 30px;
     top: -5px;
     text-align: center;
-   pointer-events: none;
+    pointer-events: none;
     display: none;
 }
 .nav-bullets .bullet .tooltip::before{
@@ -240,11 +240,14 @@ body {
     font-weight: bold;
 }
 
+.header-area .links-container{
+    width: 100%;
+    text-align: right;
+}
 .header-area .links {
     list-style: none;
     padding-left: 0;
-    padding-right: 15px;
-    text-align: right;
+    
     width: 100%;
     font-size: 15px;
 }
@@ -267,6 +270,33 @@ body {
 .header-area .links li a:hover,
 .header-area .links li a.active {
     color: var(--main-color);
+}
+.header-area .toggle-menu{
+    background: none;
+    border: none;
+    width: 40px;
+    cursor: pointer;
+    margin-top: 15px;
+    display: none;
+    position: relative;
+
+}
+
+.header-area .toggle-menu.menu-active::before{
+    content: "";
+    border-width: 10px;
+    border-style: solid;
+    border-color: transparent transparent white transparent;
+    position: absolute;
+    bottom: -15px;
+    left: 10px;
+}
+
+.header-area .toggle-menu span{
+    display: block;
+    background-color: #fff;
+    height: 4px;
+    margin-bottom: 3px;
 }
 
 .introduction-text {
@@ -298,6 +328,39 @@ body {
     line-height: 1.6;
     font-size: 20px;
     margin: 0;
+}
+
+@media (max-width:991px) {
+    .header-area .links{
+        display:none ;
+    }
+        .header-area .links.open{
+        background-color: #fff;
+        padding: 5px;
+        display: block;
+        position: absolute;
+        left: 0;
+        top: 47px;
+        width: 100%;
+        text-align: left;
+        border-radius: 5px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        -ms-border-radius: 5px;
+        -o-border-radius: 5px;
+}
+        .header-area .links.open.links li{
+            display: block;
+            margin-bottom: 10px;
+        }
+    .header-area .links.open.links a{
+        color: var(--main-color);
+        font-weight: bold;
+    }
+
+.header-area .toggle-menu {
+    display: inline-block;
+}
 }
 
 /* End landing Page */
@@ -719,3 +782,113 @@ margin: 35px 0 10px;
     margin: 0;
 }
 /* End Testimonials */
+
+/* Start Contact Us */
+.contact{
+    min-height: 1000px;
+    background-image: url("/imge/contact.jpeg");
+    background-size:cover;
+    padding-top: 80px;
+    padding-bottom: 80px;
+    position: relative;
+}
+.contact .overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255 255 2550 / 60%);
+} 
+.contact .container{
+    position: relative;
+    z-index: 2;
+    height: 400px;
+   
+}
+.contact h2{
+    font-weight: bold;
+    font-size: 30px;
+    color: var(--main-color);
+    margin: 0 0 60px;
+    text-align: center;
+}
+
+.contact form{
+    width: 70%;
+    height: 100%;
+    display: flex;
+    margin: 0 auto;
+}
+
+.contact form .left{
+    flex-basis: 60%;
+}
+.contact form .right{
+    flex-basis: 40%;
+}
+.contact form input:not([type="submit"]) {
+    margin: 0 0 10px ;
+    width: 95%;
+    background-color: rgb(218, 218, 0218 , 0.19);
+    border: 1px solid #ccc;
+    height: 40px;
+}
+.contact form textarea{
+background-color: rgb(218, 218, 0218, 0.19);
+border: 1px solid #ccc;
+height: 140px;
+margin-bottom: 5px;
+width: 100%;
+
+}
+
+.contact form input:not([type="submit"]):focus, 
+.contact form textarea:focus{
+  outline: 1px solid var(--main-color);
+
+}
+
+.contact form input[type="submit"]{
+    height: 40px;
+    margin: 0;
+    width: 100%;
+    background-color: var(--main-color);
+    color: #fff;
+    cursor: pointer;
+   
+}
+.contact form textarea:focus::placeholder,
+.contact form input:not([type="submit"]):focus::placeholder{
+    opacity: 0;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+}
+/* End Contact Us */
+
+/* Start Grid System */
+@media (min-width:576px) {
+    .container{
+        max-width: 540px;
+    }
+}
+@media (min-width:768px) {
+    .container{
+        max-width: 720px;
+    }
+}
+@media (min-width:992px) {
+    .container{
+        max-width: 960px;
+    }
+}
+@media (min-width:1200px) {
+    .container{
+        max-width: 1140px;
+    }
+}
+
+/* End Grid System */
