--- a/css/master.css
+++ b/css/master.css
@@ -978,6 +978,15 @@ width: 100%;
 }
 /* End Contact Us */
 
+/* Start Footer */
+.footer{
+    background-color: #333;
+    color: #EEE;
+    padding: 20px;
+    text-align: center;
+}
+/* End Footer */
+
 /* Start Grid System */
 @media (min-width:576px) {
     .container{
